--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ PyPDF2 = "^1.26.0"
 PyMuPDF = "^1.19.2"
 pdfminer3 = "^2018.12.3"
 "pdfminer.six" = "^20211012"
+spacy = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 
