--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pdfminer3 = "^2018.12.3"
 spacy = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^21.11b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
