--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyMuPDF = "^1.19.2"
 pdfminer3 = "^2018.12.3"
 "pdfminer.six" = "^20211012"
 spacy = "^3.2.0"
+multilingual-pdf2text = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.11b1", allow-prereleases = true}
