--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ multilingual-pdf2text = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.11b1", allow-prereleases = true}
+pycodestyle = "^2.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
