--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "python.formatting.provider": "black",
-  "python.pythonPath": "/home/rich/.cache/pypoetry/virtualenvs/tcc-sYdELU-S-py3.9/bin/python",
+  "python.pythonPath": "/home/rich/.cache/pypoetry/virtualenvs/tcc-sYdELU-S-py3.8/bin/python3.8",
   "python.linting.pycodestyleEnabled": true,
   "python.linting.enabled": true,
   "discord.detailsEditing": "Fazendo meu TCC, mexendo em {file_name}",
