--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,10 @@ pdfminer3 = "^2018.12.3"
 "pdfminer.six" = "^20211012"
 spacy = "^3.2.0"
 multilingual-pdf2text = "^1.1.0"
-pyxpdf = "^0.2.3"
-pyxpdf-data = "^1.1.0"
 Pillow = "^9.0.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^21.11b1", allow-prereleases = true}
-pycodestyle = "^2.8.0"
+blue = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
