--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pdfminer3 = "^2018.12.3"
 spacy = "^3.2.0"
 multilingual-pdf2text = "^1.1.0"
 Pillow = "^9.0.0"
+google-api-python-client = "^2.40.0"
+google-auth-httplib2 = "^0.1.0"
+google-auth-oauthlib = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 blue = "^0.7.0"
